@@ -4,6 +4,7 @@ import java.math.BigInteger;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -137,7 +138,7 @@ public final class IdentifierJsonParser {
   @SuppressWarnings("unchecked")
   private static List<Object> asArrayOrEmpty(final Object value, final String path) {
     if (value == null) {
-      return List.of();
+      return Collections.emptyList();
     }
     if (!(value instanceof List<?> list)) {
       throw new IllegalStateException(path + " must be a JSON array");
@@ -147,7 +148,7 @@ public final class IdentifierJsonParser {
 
   private static String requiredString(final Object value, final String path) {
     final String string = optionalString(value);
-    if (string == null || string.isBlank()) {
+    if (string == null || string.trim().isEmpty()) {
       throw new IllegalStateException(path + " must be a non-empty string");
     }
     return string.trim();
@@ -155,7 +156,7 @@ public final class IdentifierJsonParser {
 
   private static String requiredExactString(final Object value, final String path) {
     final String string = optionalString(value);
-    if (string == null || string.isBlank()) {
+    if (string == null || string.trim().isEmpty()) {
       throw new IllegalStateException(path + " must be a non-empty string");
     }
     if (!string.trim().equals(string)) {
